<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    

	   	<Button 
   	    android:layout_alignParentLeft="true"
		android:id="@+id/importContactBt" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
   	
   	<LinearLayout android:orientation="vertical"
		android:layout_toRightOf="@id/importContactBt"
		android:layout_toLeftOf="@+id/removeContactBt"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content" >
   	    <LinearLayout android:orientation="horizontal"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content">
		    <TextView
		      android:id="@+id/tvName"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
    		android:layout_marginLeft="5dp"
    		android:layout_marginRight="5dp" />
		   <TextView
		      android:id="@+id/tvNumber"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="@string/tvNumber"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="10dp"/>   	    
   		</LinearLayout>
   	    <LinearLayout android:orientation="horizontal"
   	        android:weightSum = "2"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content">
		    <TextView
		      android:id="@+id/tvType"
		      android:layout_weight = "1"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="@string/tvType"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="10dp"  />
		   <TextView
		      android:id="@+id/tvAccount"
		      android:layout_weight = "1"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="@string/tvAccount"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="10dp"
     />   	    
   		</LinearLayout>
   		
   	</LinearLayout>
   	
	   	<Button android:text="@string/removeContactBt"
		android:id="@+id/removeContactBt" 
		android:layout_alignParentRight="true"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>


</RelativeLayout>
